@@ -127,7 +127,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-XX:-UseSplitVerifier</argLine>
+                    <argLine>-XX:MaxPermSize=1012m -XX:-UseSplitVerifier</argLine>
                     <systemProperties>
                         <property>
                             <name>com.sun.aas.instanceRoot</name>
